resources/ingress/api-keptn-ingress.yaml
apiVersion: networking.k8s.io/v1
  # apiVersion: networking.k8s.io/v1beta1 : {Ranjith} The networking.k8s.io/v1beta1 API version for the Ingress resource has been deprecated since Kubernetes v1.19 and was completely removed in Kubernetes v1.22.
  kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly 
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
  name: api-keptn-ingress
  namespace: keptn
spec:
  rules:
  - host: keptn.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: api-gateway-nginx
          servicePort: 80
        path: /
  tls:
  - hosts:
    - keptn.domain.placeholder
    #secretName: keptn-tls
