resources/ingress/k8-api.yaml
apiVersion: networking.k8s.io/v1
  # apiVersion: networking.k8s.io/v1beta1 : {Ranjith} The networking.k8s.io/v1beta1 API version for the Ingress resource has been deprecated since Kubernetes v1.19 and was completely removed in Kubernetes v1.22.
kind: Ingress
metadata:
  name: k8-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #cert-manager.io/cluster-issuer: "letsencrypt" 
spec:
  rules:
  - host: api.kubernetes.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: kubernetes
          servicePort: 443
        path: /
  tls:
  - hosts:
    - api.kubernetes.domain.placeholder
    #secretName: k8-api-tls
